feat(java): updating bytebuddy for java 25
ref: #33865